# AI-disease-predictor

./: .replit  README.md  app.py  pyproject.toml  train_image_model.py  train_symptom_model.py
assets/: symptoms_list.py
attached_assets/: Pasted-import-tensorflow-as-tf-from-tensorflow-keras-layers-import-Dense-Dropout-GlobalAveragePooling2D--1745390453026.txt
models/: create_test_model.py  efficient_net_weights.pkl  efficientnet_performance.md  model_performance.md  tf_model_performance.txt
utils/: data_loader.py  image_data_loader.py  image_predictor.py  image_predictor_tf.py  model_trainer.py  symptom_predictor.py
